--- a/Payroll EDA.ipynb
+++ b/Payroll EDA.ipynb
@@ -3539,11 +3539,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_ranks.to_csv('city_ranks',index = False)"
+    "city_ranks.to_csv('city_ranks.csv',index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ranking = pd.read_csv('ranking_w_boroughs.csv')\n",
+    "\n",
+    "# forward fill nans with the percent change in population of the row above\n",
+    "percent_changes = ranking.copy()\n",
+    "\n",
+    "# Get year to year percent changes\n",
+    "for col1, col2 in zip(['April 1, 2020\\nEstimate Base', 'July 1, 2020 Estimate', 'July 1, 2021 Estimate', 'July 1, 2022 Estimate'],\n",
+    "                      ['July 1, 2020 Estimate', 'July 1, 2021 Estimate','July 1, 2022 Estimate', 'July 1, 2023 Estimate']):\n",
+    "    percent_changes[col2] = (ranking[col2] - ranking[col1]) / ranking[col1]\n",
+    "\n",
+    "# Forward fill NaNs using the percent change from the previous row\n",
+    "for i in range(1, len(ranking)):\n",
+    "    for col1, col2 in zip(['April 1, 2020\\nEstimate Base', 'July 1, 2020 Estimate', 'July 1, 2021 Estimate', 'July 1, 2022 Estimate'],\n",
+    "                          ['July 1, 2020 Estimate', 'July 1, 2021 Estimate','July 1, 2022 Estimate', 'July 1, 2023 Estimate']):\n",
+    "        if pd.isnull(ranking.at[i, col2]):\n",
+    "            ranking.at[i, col2] = ranking.at[i, col1] * (1 + percent_changes.at[i-1, col2])\n",
+    "\n",
+    "\n",
+    "cols2round = ['July 1, 2021 Estimate','July 1, 2022 Estimate', 'July 1, 2023 Estimate']\n",
+    "ranking[cols2round] = ranking[cols2round].round()\n",
+    "ranking.to_csv('ranking_w_boroughs.csv', index=False)"
    ]
   },
   {
